--- a/contaePages/naContae11.html
+++ b/contaePages/naContae11.html
@@ -12,10 +12,10 @@
 ~~~~~~~~~~~..^^^^^^.........*.....~~
 ~~~~~~~~~~...^^^^^^^^.......**.....~
 ~~~~.......^^MMMMMMM^^.......*.....~
-~~~......^^.>>>>>^MM^^^^^....**....~
-~~......^^^>>^M^>^^^>^^^^......*...~
-~......>>>>>^MM^>>>>>^^^^......*...~
-~>>>>>>>^^^^..MMMMM^^^.^^......**..~
+~~~......^^.rrrrr^MM^^^^^....**....~
+~~......^^^rr^M^r^^^r^^^^......*...~
+~......rrrrr^MM^rrrrr^^^^......*...~
+~rrrrrrr^^^^..MMMMM^^^.^^......**..~
 ~...^^^^^^MMMMMMMMMM^^^^^.......*..~
 .....*^^^^^^MMMMMMMMM^^^^.......*..~
 ......*....MMMMM^^^^^^^.........**.~
