--- a/contaePages/naContae12.html
+++ b/contaePages/naContae12.html
@@ -8,28 +8,28 @@
     <div id="mapdata">
 ~~~~~~~~~~~~~~~~..~~~~~~~~~~~~
 ~~~~~~~~~~......*.~~~~~~~~~~~~
-~~~~~~~~~......**..>~~~~~~~~~~
-~~~~~~.........*...>>>~~~~~~~~
-~~~~~~.........****..>>~~~~~~~
-~~~~~~~.....>>.*..**..>>~~~~~~
-~~~~..*.....>>>>...**..>>>~~~~
-~~~~..***...>>.>>>..**...>~~~~
-~~~~~~..***....*.>>>.....>~~~~
-~~~~~.....***..*...>>>>.>~~~~~
-~~......********...^^^>>>~~~~~
-~.....***......**...^^^^>~~~~~
-.....**....~~...**...^^^>>~~~~
-~...**...~~~~~...****..^^>>~~~
-~..**..~~~~~~~~...*.***^^^>>~~
-~~~~~~~~~~~~~~~....*..****.>>~
-~~~~~~~~~~~~~~~~...**.......>>
-~~~~~~~~~~~~~~~~~...*.......>>
-~~~~~~~~~~~~~~~~~...*.......>>
-~~~~~~~~~~~~~~~~~~..*.......~>
-~~~~~~~~~~~~~~~~~~..*.....**>>
-~~~~~~~~~~~~~~~~~~..*...**..>>
-~~~~~~~~~~~~~~~~~~..*..**...>>
-~~~~~~~~~~~~~~~~~~..*..*....>>
+~~~~~~~~~......**..r~~~~~~~~~~
+~~~~~~.........*...rrr~~~~~~~~
+~~~~~~.........****..rr~~~~~~~
+~~~~~~~.....rr.*..**..rr~~~~~~
+~~~~..*.....rrrr...**..rrr~~~~
+~~~~..***...rr.rrr..**...r~~~~
+~~~~~~..***....*.rrr.....r~~~~
+~~~~~.....***..*...rrrr.r~~~~~
+~~......********...^^^rrr~~~~~
+~.....***......**...^^^^r~~~~~
+.....**....~~...**...^^^rr~~~~
+~...**...~~~~~...****..^^rr~~~
+~..**..~~~~~~~~...*.***^^^rr~~
+~~~~~~~~~~~~~~~....*..****.rr~
+~~~~~~~~~~~~~~~~...**.......rr
+~~~~~~~~~~~~~~~~~...*.......rr
+~~~~~~~~~~~~~~~~~...*.......rr
+~~~~~~~~~~~~~~~~~~..*.......~r
+~~~~~~~~~~~~~~~~~~..*.....**rr
+~~~~~~~~~~~~~~~~~~..*...**..rr
+~~~~~~~~~~~~~~~~~~..*..**...rr
+~~~~~~~~~~~~~~~~~~..*..*....rr
 ~~~~~~~~~~~~~~~~~~.**......~~~
 ~~~~~~~~~~~~~~~~~~........~~~~
 ~~~~~~~~~~~~~~~~~~.......~~~~~
