--- a/contaePages/naContae15.html
+++ b/contaePages/naContae15.html
@@ -17,23 +17,23 @@
 ~~..^.^^..*.....~~~..**^^^..~~~~
 ~~..^^^...*....~~~..**^^^^.~~~~~
 ~~..^^^...*.........*.^....~~~~~
-~~...^^..**...>>...**.^^..~~~~~~
-~~...**.**.....>>>>>......~~~~~~
-~~~....**........**>>^^...~~~~~~
-~~~~~~...........*..>^^....~~~~~
-~~~~~~~..........*>>>^^^...~~~~~
-~~~~~~.........>>>^^^^^^^...~~~~
-~~~~~~......***>****^^.......~~~
-~~~~.......**..>>>^***........~~
-~.........**.....>>*^.******...~
-.........**.....>>.**...........
-..........****>>>^^.*...........
-..........*..>>^^^^..**.........
-.......****.>>.^^^^...*>>>>.....
-~~..........>**^^^^...>>~~>>>>..
-~~~~........>>*.......>~~~~~~~~~
-~~~~.........>>>.....>>~~~~~~~~~
-~~~............>>>>>>>.~~~~~~~~~
+~~...^^..**...rr...**.^^..~~~~~~
+~~...**.**.....rrrrr......~~~~~~
+~~~....**........**rr^^...~~~~~~
+~~~~~~...........*..r^^....~~~~~
+~~~~~~~..........*rrr^^^...~~~~~
+~~~~~~.........rrr^^^^^^^...~~~~
+~~~~~~......***r****^^.......~~~
+~~~~.......**..rrr^***........~~
+~.........**.....rr*^.******...~
+.........**.....rr.**...........
+..........****rrr^^.*...........
+..........*..rr^^^^..**.........
+.......****.rr.^^^^...*rrrr.....
+~~..........r**^^^^...rr~~rrrr..
+~~~~........rr*.......r~~~~~~~~~
+~~~~.........rrr.....rr~~~~~~~~~
+~~~............rrrrrrr.~~~~~~~~~
 ~~~....................~~~~~~~~~
 ~~~~.......~~~~........~~~~~~~~~
 ~~~~~.....~~~~~~....~~~~~~~~~~~~
