--- a/contaePages/naContae16.html
+++ b/contaePages/naContae16.html
@@ -8,23 +8,23 @@
     <div id="mapdata">
 
 module.exports.laois = `~~~~~~~~~~~~....~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~.....>>>>>>>>~~~~~~~~~~~~~~~~~~
-~~~~~~~~~^^^^.>......>>>>>>>>>~~~~~~~~~~
-~~~~~~~~~^^^^.>...............>>~~~~~~~~
-~~~~~~~~^^^^.>.*...............>~~~~~~~~
-~~~~~~~^^^.>>>.***........**...>~~~~~~~~
-~~~~~^^^^^.......*.......**....>~~~~~~~~
-~~~^^^^^^........**......*.....>~~~~~~~~
-~.^^^^^^^......******...**.....>~~~~~~~~
-~.^^^^^^^.....**....*****......>~~~~~~~~
-~..^^^^^.....**......*.........>>~~~~~~~
-~............*.......*..........>>>~~~~~
-~~.......****.......****..........>>>>>~
-~~~....***........***...*******.......>>
-~~............*****....**.....**.......>
-~..........****........*...............>
-..........**.........***........^^.^^..>
-..............~~....**.....~~....^^^^^.>
+~~~~~~~~~.....rrrrrrrr~~~~~~~~~~~~~~~~~~
+~~~~~~~~~^^^^.r......rrrrrrrrr~~~~~~~~~~
+~~~~~~~~~^^^^.r...............rr~~~~~~~~
+~~~~~~~~^^^^.r.*...............r~~~~~~~~
+~~~~~~~^^^.rrr.***........**...r~~~~~~~~
+~~~~~^^^^^.......*.......**....r~~~~~~~~
+~~~^^^^^^........**......*.....r~~~~~~~~
+~.^^^^^^^......******...**.....r~~~~~~~~
+~.^^^^^^^.....**....*****......r~~~~~~~~
+~..^^^^^.....**......*.........rr~~~~~~~
+~............*.......*..........rrr~~~~~
+~~.......****.......****..........rrrrr~
+~~~....***........***...*******.......rr
+~~............*****....**.....**.......r
+~..........****........*...............r
+..........**.........***........^^.^^..r
+..............~~....**.....~~....^^^^^.r
 ............~~~~~........~~~~~~..^^^^^.~
 ~~.........~~~~~~~......~~~~~~~~~~^^^.~~
 ~~~~~.....~~~~~~~~~~..~~~~~~~~~~~~~~~~~~`;
