--- a/contaePages/naContae17.html
+++ b/contaePages/naContae17.html
@@ -7,27 +7,27 @@
     </head>
     <div id="mapdata">
 
-~~~~~~~~~~~~~~~~~~~~~>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~>>.>>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~>>>.....>>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~>...^MMM^^>>>>~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~>..^MMMMMMMMM>>>>~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~...^MMMMMMMMMMM.>>>>>~~~~~~~~~~~~~~~~~~
-~~~~~~~~~^^^~~~~...MMMMMMMMM^MMMM...>>>>>>>>>>>>>>>~~~~
-~~~~~~~..^^^^.~~~..MMMMMM^^MMMMMM^^......***......>>>>~
+~~~~~~~~~~~~~~~~~~~~~r~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~rr.rrr~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~rrr.....rrr~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~r...^MMM^^rrrr~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~r..^MMMMMMMMMrrrr~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~...^MMMMMMMMMMM.rrrrr~~~~~~~~~~~~~~~~~~
+~~~~~~~~~^^^~~~~...MMMMMMMMM^MMMM...rrrrrrrrrrrrrrr~~~~
+~~~~~~~..^^^^.~~~..MMMMMM^^MMMMMM^^......***......rrrr~
 ~~~~~...^^^^^^.......^^.MMMMMMMMMMM^^..***............~
->>>>>>>...^^..........^^^MMMMMMMMMMMM..*..............~
-......>>..^^^^>>>>>>>..^^^^^^^^MMMMM^**...............~
-~.......>>>>>>>^...^>>>^^^^.......****.................
-~~.............^^^^^..>.......****....................~
-~~~.............*****.>..******....~~~~~~~...........~~
-~~~~.......******...**>>**..**...~~~~~~~~~~~~.....~~~~~
-~~~~~.....^^^^^........>>..**...~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~....^^^^^^^^.....>>.**...~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~..^^^^^^^^...>.**....~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~..^^^^^^^.>>**.....~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~.^^^***.>**......~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~.^^^^^.>.......~~~~~~~~~~~~~~~~~~~~~~~~~
+rrrrrrr...^^..........^^^MMMMMMMMMMMM..*..............~
+......rr..^^^^rrrrrrr..^^^^^^^^MMMMM^**...............~
+~.......rrrrrrr^...^rrr^^^^.......****.................
+~~.............^^^^^..r.......****....................~
+~~~.............*****.r..******....~~~~~~~...........~~
+~~~~.......******...**rr**..**...~~~~~~~~~~~~.....~~~~~
+~~~~~.....^^^^^........rr..**...~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~....^^^^^^^^.....rr.**...~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~..^^^^^^^^...r.**....~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~..^^^^^^^.rr**.....~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~.^^^***.r**......~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~.^^^^^.r.......~~~~~~~~~~~~~~~~~~~~~~~~~
 ~~~~~~~~~~~~~~~~.............~~~~~~~~~~~~~~~~~~~~~~~~~~
 ~~~~~~~~~~~~~~~~~~.........~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ~~~~~~~~~~~~~~~~~~~~.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
