--- a/contaePages/naContae18.html
+++ b/contaePages/naContae18.html
@@ -14,29 +14,29 @@
 ....^^^^**.........^^^^*^..~~~~~~
 ~~....^^^**........^^***...~~~~~~
 ~~~~......**......****.....~~~~~~
-~~~~~......**....**........>~~~~~
-~~~~~~......**..**.........>~~~~~
-~~~~~~~......****..........>>~~~~
-~~~~~~~~......***********...>>~~~
-~~~~~~~~......***.......****.>>~~
-~~~~~~~~~....**.*..........*..>~~
-~~~~~~~~~....*..**........**..>~~
-~~~~~~~~~...**...**.......*...>>~
-~~~~~~~~~.**......****..**.....>~
-~~~~~~~~~.*........*.****......>>
-~~~~~~~~~..........**.....^^^^^.>
-~~~~~~~~~...........*....^^^^^^.>
-~~~~~~~~~...........**...^^^^^..>
-~~~~~~~~~~~...^^.....**.....^^..>
-~~~~~~~~~~~...^^^^^^..*.........>
-~~~~~~~~~~~~..^^^^^^^.*........>>
-~~~~~~~~~~~~...^^^^^^^**.......>~
-~~~~~~~~~~~~...^^^^^^^^**.....>>~
-~~~~~~~~~~~~~....^^^^^^.*....>>~~
-~~~~~~~~~~~~~~..>....^^^*....>~~~
-~~~~~~~~~~~~~~~~>>>.....*....>~~~
-~~~~~~~~~~~~~~~~~~>>....*....>~~~
-~~~~~~~~~~~~~~~~~~~>>>>>>>>>>>>>~
+~~~~~......**....**........r~~~~~
+~~~~~~......**..**.........r~~~~~
+~~~~~~~......****..........rr~~~~
+~~~~~~~~......***********...rr~~~
+~~~~~~~~......***.......****.rr~~
+~~~~~~~~~....**.*..........*..r~~
+~~~~~~~~~....*..**........**..r~~
+~~~~~~~~~...**...**.......*...rr~
+~~~~~~~~~.**......****..**.....r~
+~~~~~~~~~.*........*.****......rr
+~~~~~~~~~..........**.....^^^^^.r
+~~~~~~~~~...........*....^^^^^^.r
+~~~~~~~~~...........**...^^^^^..r
+~~~~~~~~~~~...^^.....**.....^^..r
+~~~~~~~~~~~...^^^^^^..*.........r
+~~~~~~~~~~~~..^^^^^^^.*........rr
+~~~~~~~~~~~~...^^^^^^^**.......r~
+~~~~~~~~~~~~...^^^^^^^^**.....rr~
+~~~~~~~~~~~~~....^^^^^^.*....rr~~
+~~~~~~~~~~~~~~..r....^^^*....r~~~
+~~~~~~~~~~~~~~~~rrr.....*....r~~~
+~~~~~~~~~~~~~~~~~~rr....*....r~~~
+~~~~~~~~~~~~~~~~~~~rrrrrrrrrrrrr~
 
     </div>
 
