--- a/contaePages/naContae19.html
+++ b/contaePages/naContae19.html
@@ -13,27 +13,27 @@
 ~~~~......~~~~~.....^^^....*.~~~~~~~~~~~~~~
 ~~..^^^..**.~~~.....^^.....*..~~~~~~~~~~~~~
 ~.^^^.....**...............*.........~~~~~~
-~^^^^^.....*...............*........>>..~~~
-^^^^^^.....**..............*........>....~~
-^^^^^^^^.....**............***.....>>......
-~.^^..........****...........*....>>.......
-~~...............****........*.>>>>......~~
-~~~~................**.......>>..........~~
-~~~~~~~~~~...........**>>>..>>...........~~
-~~~~~~~~~~...........>>>.>>>>*...~~~~~~~~~~
-~~~~~~~~~~..........>>.*.....*...~~~~~~~~~~
-~~~~~~~~~...........>..**....*...~~~~~~~~~~
-~~~~~~~~~>>>>>>>>>>>>...***..***..~~~~~~~~~
-~~~~~~~~~.........>>......**...**..~~~~~~~~
-~~~~~~~~.........>>........*....**.~~~~~~~~
-~~~~~..........>>..........**....**.~~~~~~~
-~~~~..........>>............*.....**..~~~~~
-~...........>>>.............**.....**..~~~~
-~..........>>.......................**.~~~~
-..........>>.....~~~~~~~~..............~~~~
-.........>>....~~~~~~~~~~.~~...........~~~~
-~.....>>>>..~~~~~~~~~~~~~~~~........~~~~~~~
-~....>>~~~~~~~~~~~~~~~~~~~~~.......~~~~~~~~
+~^^^^^.....*...............*........rr..~~~
+^^^^^^.....**..............*........r....~~
+^^^^^^^^.....**............***.....rr......
+~.^^..........****...........*....rr.......
+~~...............****........*.rrrr......~~
+~~~~................**.......rr..........~~
+~~~~~~~~~~...........**rrr..rr...........~~
+~~~~~~~~~~...........rrr.rrrr*...~~~~~~~~~~
+~~~~~~~~~~..........rr.*.....*...~~~~~~~~~~
+~~~~~~~~~...........r..**....*...~~~~~~~~~~
+~~~~~~~~~rrrrrrrrrrrr...***..***..~~~~~~~~~
+~~~~~~~~~.........rr......**...**..~~~~~~~~
+~~~~~~~~.........rr........*....**.~~~~~~~~
+~~~~~..........rr..........**....**.~~~~~~~
+~~~~..........rr............*.....**..~~~~~
+~...........rrr.............**.....**..~~~~
+~..........rr.......................**.~~~~
+..........rr.....~~~~~~~~..............~~~~
+.........rr....~~~~~~~~~~.~~...........~~~~
+~.....rrrr..~~~~~~~~~~~~~~~~........~~~~~~~
+~....rr~~~~~~~~~~~~~~~~~~~~~.......~~~~~~~~
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~....~~~~~~~~~~
 
     
