--- a/contaePages/naContae20.html
+++ b/contaePages/naContae20.html
@@ -24,9 +24,9 @@
 z...*******88**...88^^^^^.............**...~~~~~
 z........8888888888z..^^^..............*..~~~~~~
 ......8888887888z.....^^^...*******....*^..~~~~~
-888888888888888z...........**.>.^^**....*^..~~~~
-888898888888z.......*******>>>>>^^.*^...*^..~~~~
-88888888z.......****..^^^^M>>>>>M***....*^..~~~~
+888888888888888z...........**.r.^^**....*^..~~~~
+888898888888z.......*******rrrrr^^.*^...*^..~~~~
+88888888z.......****..^^^^MrrrrrM***....*^..~~~~
 88888z........***..^^MMMMMMMMMMM^*.....**^..~~~~
 88z..........**..MMMMMMMMM^^^^^***....**^^..~~~~
 88.888888...^**MMMMMMMM.********.******^^...~~~~
