--- a/contaePages/naContae22.html
+++ b/contaePages/naContae22.html
@@ -10,29 +10,29 @@
 8888888888z..........^^...~~~~~~~~~~~~~~~~~~~
 888z....88......^^^^^^^^....~~~~~~~~~~~~~~~~~
 88z...........^^^^^^^.^^........~~~~~~~~~~~~~
-88z..8.....>>.^^***^^^..........~~~~~~~~~~~~~
-8z...8....>>>****^*^............~~~~~~~~~~~~~
+88z..8.....rr.^^***^^^..........~~~~~~~~~~~~~
+8z...8....rrr****^*^............~~~~~~~~~~~~~
 888888z..*****^^^.***..*****....~~~~~~~~~~~~~
-88z...8***....^^....****>>>*****...****~~~~~~
-z......**...^^^^^^^^^...>>>>>..*****...~~~~~~
-........***..^^^^^^^^^^..>>>>>>...*.........~
-z.........*...^^^^^^^^^^^^>>>>>>..***........
+88z...8***....^^....****rrr*****...****~~~~~~
+z......**...^^^^^^^^^...rrrrr..*****...~~~~~~
+........***..^^^^^^^^^^..rrrrrr...*.........~
+z.........*...^^^^^^^^^^^^rrrrrr..***........
 8888888z....^^^^^^^^^.^^^^^.^.......**.......
-888888888z..^^^^^^....^^^.^^^..>>>^..***.....
-888888888z..^^..8z.............>>>^^^..*...~~
+888888888z..^^^^^^....^^^.^^^..rrr^..***.....
+888888888z..^^..8z.............rrr^^^..*...~~
 888888888z....888z.............^^^^^^^.**...~
 88888888888888888z.............^^^^^^^^.***..
 8888888888888888888z.**................**....
-88888888888888888z~...****...>>>>....***.....
-888888888888z........^**^***>>>>>****........
+88888888888888888z~...****...rrrr....***.....
+888888888888z........^**^***rrrrr****........
 8888888888z.......^****^^^^*******..**.......
-888888888z.....^^***^^^^^^>>>>.......*.....~~
-888888888z....^^^*^^^^^^^>>>>>.......*...~~~~
-8888888888z...^^^^^^^^^^^>>>>.........~~~~~~~
+888888888z.....^^***^^^^^^rrrr.......*.....~~
+888888888z....^^^*^^^^^^^rrrrr.......*...~~~~
+8888888888z...^^^^^^^^^^^rrrr.........~~~~~~~
 888888888888z........^^^^^...........~~~~~~~~
-888888888888888888888z~.>>^^^........~~~~~~~~
-888888888888888888888z~~>>.........~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~.>>......~~~~~~~~~~~~
+888888888888888888888z~.rr^^^........~~~~~~~~
+888888888888888888888z~~rr.........~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~.rr......~~~~~~~~~~~~
     </div>
 
       <body>
