--- a/contaePages/naContae23.html
+++ b/contaePages/naContae23.html
@@ -8,27 +8,27 @@
     <div id="mapdata">
 
     
-~~~~~~~~~~~~~~~~~~~~~~~>>>>>>>~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~>>.....>>>~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~>>.........~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~..>.........~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~...>>>>>..........~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~...***.>>*...............~~~~~~~~~
-~~~~~~~~~~~~~~~~~...**>>>>.***..............~~~~~~~~
-~~~~~~~~~~~~~~~~~...*>>..>>..*******...........~~~~~
-~~~~~~~~~~~~~~~~~...>>....>..>>>>>>******...........
-~~~~~~~~~~~~~~~~>>>>>..*..>>>.....>>>>..****........
-~~~~~~~~~~~~~~~~.......*...>>..^^^...>>....**.......
-~~~~~~~~~~~~~~~~.......*....>>>>.^^^...>....**....~~
-~~~....~~~~~~~~......*****........^...>>.....*...~~~
-~.........~~.......***...***.....^^.>>>.....*....~~~
-~.................**.......**.^^^^..>.....***...~~~~
-~.................*......^^^*^^.....>....**....~~~~~
-~...*...................^^^^**^.....>...**....~~~~~~
-...**....................^^^^**^....>>.**....~~~~~~~
-...*....................^^^^^^***^***>>.....~~~~~~~~
-..*.....................^^^^^^^^***...>>>>..~~~~~~~~
-..*......********......^^^^.^^^**^^......>>~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~rrrrrrr~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~rr.....rrr~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~rr.........~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~..r.........~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~...rrrrr..........~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~...***.rr*...............~~~~~~~~~
+~~~~~~~~~~~~~~~~~...**rrrr.***..............~~~~~~~~
+~~~~~~~~~~~~~~~~~...*rr..rr..*******...........~~~~~
+~~~~~~~~~~~~~~~~~...rr....r..rrrrrr******...........
+~~~~~~~~~~~~~~~~rrrrr..*..rrr.....rrrr..****........
+~~~~~~~~~~~~~~~~.......*...rr..^^^...rr....**.......
+~~~~~~~~~~~~~~~~.......*....rrrr.^^^...r....**....~~
+~~~....~~~~~~~~......*****........^...rr.....*...~~~
+~.........~~.......***...***.....^^.rrr.....*....~~~
+~.................**.......**.^^^^..r.....***...~~~~
+~.................*......^^^*^^.....r....**....~~~~~
+~...*...................^^^^**^.....r...**....~~~~~~
+...**....................^^^^**^....rr.**....~~~~~~~
+...*....................^^^^^^***^***rr.....~~~~~~~~
+..*.....................^^^^^^^^***...rrrr..~~~~~~~~
+..*......********......^^^^.^^^**^^......rr~~~~~~~~~
 ..**....**......***....^^^^^^^**.^^^^....~~~~~~~~~~~
 ~..*...**.........***.......***^^^^^^..~~~~~~~~~~~~~
 ~...****...~~~~......**...***.^^^^^.~~~~~~~~~~~~~~~~
