--- a/contaePages/naContae24.html
+++ b/contaePages/naContae24.html
@@ -13,18 +13,18 @@
 ~~~~~~~~~~~~~~..**^^.....*...~
 ~~~~~~~~~~~~..**^^^^.....*...~
 ~~~~~~~~~~...*.^^^^^^....*....
-~~~~~~......*..^^^^^..>..**...
-..........**...^^^^..>>>.***..
-.......***.....^^....>>>.*.**.
-...****..............>>..*..*.
-.**..................>>..****.
-.*...................>>......~
-..*...................>>....~~
-..*............^^......>>>~~~~
->>>>>>>>.......^^.........>~~~
-~~..*..>>>.....^^..........~~~
-~~~..*...>>....^^^......*...~~
-~~~~..*...>..^^^^^.....**...~~
+~~~~~~......*..^^^^^..r..**...
+..........**...^^^^..rrr.***..
+.......***.....^^....rrr.*.**.
+...****..............rr..*..*.
+.**..................rr..****.
+.*...................rr......~
+..*...................rr....~~
+..*............^^......rrr~~~~
+rrrrrrrr.......^^.........r~~~
+~~..*..rrr.....^^..........~~~
+~~~..*...rr....^^^......*...~~
+~~~~..*...r..^^^^^.....**...~~
 ~~~~...*.....^^^^^^...**....~~
 ~~~~~...^^....^^^^MM.**....~~~
 ~~~~~...*^^.^^^^^MMM^*....~~~~
