--- a/contaePages/naContae25.html
+++ b/contaePages/naContae25.html
@@ -7,10 +7,10 @@
     </head>
     <div id="mapdata">
 ~~~~~~~~~~~...~~~~~~~~~~~..~~
-~~~~~~~~.......>>>>>>......~~
-~~~~~~~............>...*....~
-~~~~~~.............>***.....~
-~~~~~~...........****>>>>>>.~
+~~~~~~~~.......rrrrrr......~~
+~~~~~~~............r...*....~
+~~~~~~.............r***.....~
+~~~~~~...........****rrrrrr.~
 ~~~~~.........****..........~
 ~~~.........***............~~
 ~~.........**...*****....~~~~
