--- a/contaePages/naContae26.html
+++ b/contaePages/naContae26.html
@@ -11,31 +11,31 @@
 ~~~~~~~~~~~~~~~~~~.......*******.......~~~
 ~~~~~~~~~~~~~~~~~.......**......**.......~
 ~~~~~~~~~~~~~~~~.......**........***......
-~~......~~~~>~~.**....**...........**.....
-~........~~~>~.***....*.............**....
-~.........>>>..*.*....*........~~....**...
-~........>>...*..*...*........~~~~........
-........>>..**...*...*.......~~~~~~......~
-.......>>..**...**..**.......~~~~~~.....~~
-.......>..*.....**.**.......~~~~~~~~.~~~~~
-.......>.**......***.......~~~~~~~~~~~~~~~
-~......>**.......**......*~~~~~~~~~~~~~~~~
-~~....>>*.........**....**.~~~~~~~~~~~~~~~
-~~~...>.*..........*..**....~~~~~~~~~~~~~~
-~~~~..>>*..........****.....~~~~~~~~~~~~~~
-~~~~~~.>**..................~~~~~~~~~~~~~~
-~~~~~~~.>*..................~~~~~~~~~~~~~~
-~~~~~~~~>>*.................~~~~~~~~~~~~~~
-~~~~~~~~~>**....^^^^..^...~~~~~~~~~~~~~~~~
-~~~~~~~~~~>**...^^^^^^^.~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~>>**..^^^^^^.~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~>.***.^^^^^.~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~>>..*.^^^^.~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~>>.**^^^..~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~>..*^^^..~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~>>.*^^^.~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~>.*^^.~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~>>...~~~~~~~~~~~~~~~~~~~~~~~`;
+~~......~~~~r~~.**....**...........**.....
+~........~~~r~.***....*.............**....
+~.........rrr..*.*....*........~~....**...
+~........rr...*..*...*........~~~~........
+........rr..**...*...*.......~~~~~~......~
+.......rr..**...**..**.......~~~~~~.....~~
+.......r..*.....**.**.......~~~~~~~~.~~~~~
+.......r.**......***.......~~~~~~~~~~~~~~~
+~......r**.......**......*~~~~~~~~~~~~~~~~
+~~....rr*.........**....**.~~~~~~~~~~~~~~~
+~~~...r.*..........*..**....~~~~~~~~~~~~~~
+~~~~..rr*..........****.....~~~~~~~~~~~~~~
+~~~~~~.r**..................~~~~~~~~~~~~~~
+~~~~~~~.r*..................~~~~~~~~~~~~~~
+~~~~~~~~rr*.................~~~~~~~~~~~~~~
+~~~~~~~~~r**....^^^^..^...~~~~~~~~~~~~~~~~
+~~~~~~~~~~r**...^^^^^^^.~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~rr**..^^^^^^.~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~r.***.^^^^^.~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~rr..*.^^^^.~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~rr.**^^^..~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~r..*^^^..~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~rr.*^^^.~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~r.*^^.~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~rr...~~~~~~~~~~~~~~~~~~~~~~~`;
 
 
     </div>
