--- a/contaePages/naContae28.html
+++ b/contaePages/naContae28.html
@@ -9,16 +9,16 @@
 888888888888888~~~~~~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~
 8888888888888888z.......~~~~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~
 8888888888z.....^^^^^^.....~~~~~~~~~~~.............~~~~~~~~~~~~
-888888z.........^^^^^^^^..>.~~~~~~~.................~~~~~~~~~~~
-88888z...^^^^^^********..>>.~~~~~~...................~~~~~~~~~~
-888z..^^^*******^^^...*>>>...~~~~.....................~~~~~~~~~
-8z..^^^***^MMMMM>>>>>>>>>>>>>>>.............**........~~~~~~~~~
-~...^^**^MMMM>>>>>>>>>>>>>>>>>...*........***.........~~~~~~~~~
-....********MMMMM^^^^*^.>>>>>....*.......**...........~~~~~~~~~
-...........***********^...>>>>...**.....**......**....~~~~~~~~~
-888888888z....^^.^^***^^..>>>>>...**....*....****.....~~~~~~~~~
-888888z.......^^..^^^******...>>...***..*...**.......~~~~~~~~~~
-8888z.....^^^^^.^^^^^^^^^.***..>>>>..*..*..**........~~~~~~~~~~
+888888z.........^^^^^^^^..r.~~~~~~~.................~~~~~~~~~~~
+88888z...^^^^^^********..rr.~~~~~~...................~~~~~~~~~~
+888z..^^^*******^^^...*rrr...~~~~.....................~~~~~~~~~
+8z..^^^***^MMMMMrrrrrrrrrrrrrrr.............**........~~~~~~~~~
+~...^^**^MMMMrrrrrrrrrrrrrrrrr...*........***.........~~~~~~~~~
+....********MMMMM^^^^*^.rrrrr....*.......**...........~~~~~~~~~
+...........***********^...rrrr...**.....**......**....~~~~~~~~~
+888888888z....^^.^^***^^..rrrrr...**....*....****.....~~~~~~~~~
+888888z.......^^..^^^******...rr...***..*...**.......~~~~~~~~~~
+8888z.....^^^^^.^^^^^^^^^.***..rrrr..*..*..**........~~~~~~~~~~
 888z......^^^^^.^^^^^^.^....***.....**..*.**........~~~~~~~~~~~
 88z....88z.......^^^^^^^^^....*******.****..........~~~~~~~~~~~
 888888888z........^^^^^^^...........***..............~~~~~~~~~~
@@ -26,12 +26,12 @@
 8888888z....88......................****...................~~~~
 8888888z~...8888............8888.......*****...........**....~~
 8888z.888888888888..........88888..........*************......~
-8888z...~~8888888888888888888888..............***.............>
-8888z.^...8888888888888888z.............^^^^^^^^^*..........>>>
-8888z.^^..8888888888888z................^^^^^^^^^*........>>>~~
-88888z.^^.8888888888888z...8............^^^^^^^.**.......>>~~~~
-888888z...8888888888888888z...............^^^^^.*.>>>>>>>>~~~~~
-8888888888888888888888888z....8~~~~........^^.^**.>~~~~~~~~~~~~
+8888z...~~8888888888888888888888..............***.............r
+8888z.^...8888888888888888z.............^^^^^^^^^*..........rrr
+8888z.^^..8888888888888z................^^^^^^^^^*........rrr~~
+88888z.^^.8888888888888z...8............^^^^^^^.**.......rr~~~~
+888888z...8888888888888888z...............^^^^^.*.rrrrrrrr~~~~~
+8888888888888888888888888z....8~~~~........^^.^**.r~~~~~~~~~~~~
 8888888888888888888888888888888~~~~~~~......^^**..~~~~~~~~~~~~~
 888888888888888888888888888888~~~~~~~~~~...^^*^..~~~~~~~~~~~~~~
 888888888888888888888888888888~~~~~~~~~~~~...*.~~~~~~~~~~~~~~~~
