--- a/contaePages/naContae29.html
+++ b/contaePages/naContae29.html
@@ -7,36 +7,36 @@
     </head>
     <div id="mapdata">
 
-~~~~~>>....~~~~~~~~~~~~~~~~~~
-~~~.>>...............~~~~~~~~
-~>>>>.............**.>>..~~~~
-.>.....**.......***.>>.....~~
-~.......*********..>>.*....~~
-~~...............>>...*....~~
-~~~.............>>....*....~~
-~~~.............>...***....~~
-~~~.........***>>****.....>..
-~~~.......***..>*.......>>>..
-~.......***....>*....>>>>...~
-~>.******......>>..>>>......~
-~>...........**.>>>>....^..~~
-~>..........*..........^^.~~~
-~>.........**.........^^.~~~~
-~>.........**......^^^..~~~~~
-~>........***....^^^.~~~~~~~~
-~>.....***..*...^^^.~~~~~~~~~
-~>..****...**...^^^~~~~~~~~~~
-~>.........*....^^.~~~~~~~~~~
-~>........**...^^^^.~~~~~~~~~
-~>.......**....^^^^..~~~~~~~~
-~>.......*......^^^^..~~~~~~~
-~>>.....**........^^^.~~~~~~~
-~~>.....*.............~~~~~~~
-~~~>..................~~~~~~~
-~~~>>>>..............~~~~~~~~
-~~~~~~>>>...........~~~~~~~~~
-~~~~~~~~>>>>>....~~~~~~~~~~~~
-~~~~~~~~~~~~>>.~~~~~~~~~~~~~~
+~~~~~rr....~~~~~~~~~~~~~~~~~~
+~~~.rr...............~~~~~~~~
+~rrrr.............**.rr..~~~~
+.r.....**.......***.rr.....~~
+~.......*********..rr.*....~~
+~~...............rr...*....~~
+~~~.............rr....*....~~
+~~~.............r...***....~~
+~~~.........***rr****.....r..
+~~~.......***..r*.......rrr..
+~.......***....r*....rrrr...~
+~r.******......rr..rrr......~
+~r...........**.rrrr....^..~~
+~r..........*..........^^.~~~
+~r.........**.........^^.~~~~
+~r.........**......^^^..~~~~~
+~r........***....^^^.~~~~~~~~
+~r.....***..*...^^^.~~~~~~~~~
+~r..****...**...^^^~~~~~~~~~~
+~r.........*....^^.~~~~~~~~~~
+~r........**...^^^^.~~~~~~~~~
+~r.......**....^^^^..~~~~~~~~
+~r.......*......^^^^..~~~~~~~
+~rr.....**........^^^.~~~~~~~
+~~r.....*.............~~~~~~~
+~~~r..................~~~~~~~
+~~~rrrr..............~~~~~~~~
+~~~~~~rrr...........~~~~~~~~~
+~~~~~~~~rrrrr....~~~~~~~~~~~~
+~~~~~~~~~~~~rr.~~~~~~~~~~~~~~
 
 
     
