--- a/contaePages/naContae30.html
+++ b/contaePages/naContae30.html
@@ -14,23 +14,23 @@
 888888888888888888888z....^^^***MMMM...~~~~~~~~.....~~~~~~~~~~~~
 88888888888888888888z..^^^^^**^****MM.........*****..~~~~~~~~~~~
 8888888888888988888z...^^^^^*^^^^^*************^^^^...~~~~~~~~~~
-888888888888888888z....^^^^^*^^^^^^^^^*.....^^^^^^^^...~~~~~~~.>
-888888888888888888z.....^^^^***^^^^^^^**....^^^^^^^^^...~~~~...>
-8888888088888888888z...~~~~...**^^^^^..**...^^^^^^^^^..........>
-888888888888888888888888888z...*..^^^...*.^^^^^^^^^............>
-888888888888888888880888788z...*.^^^^...**....^^^^^^^^........>~
-8888888888888888888888888z...***^^^^^....****...............>>>~
-8888888888888898888888z...***..^^^^^.........***...........>>~~~
-888888888888888888888z..***^^....^^......*****............>>~~~~
-88888888888888888888z.***.^^....^^^^^.****....^^^^^.......>.~~~~
-8888888988888888888z..*^^^.^^^^^^^..***.....^^^^^^^^^^...>>~~~~~
-88888888888888z.....**^^^^^^^^^^.****......^^^^^^^^^^...>>~~~~~~
-8888888888888z....***^^^^^^^^^^***........^^^^^^^^^^^^.>>~~~~~~~
-888888888888z....**^^^^^^^^^^.**.....>>....^^^^^^^^...>>~~~~~~~~
-88888878888z...***^^^^^^^^^.***.....>>>>>...^^^^^^^.>>~~~~~~~~~~
-88888888z.......^***...^^^***.....>>~~~~>>>.^^^^^^>>>~~~~~~~~~~~
-88888z.............********....>>>>~~~~~~~>>>>>>>>~~~~~~~~~~~~~~
-8888z.............~~.........>>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+888888888888888888z....^^^^^*^^^^^^^^^*.....^^^^^^^^...~~~~~~~.r
+888888888888888888z.....^^^^***^^^^^^^**....^^^^^^^^^...~~~~...r
+8888888088888888888z...~~~~...**^^^^^..**...^^^^^^^^^..........r
+888888888888888888888888888z...*..^^^...*.^^^^^^^^^............r
+888888888888888888880888788z...*.^^^^...**....^^^^^^^^........r~
+8888888888888888888888888z...***^^^^^....****...............rrr~
+8888888888888898888888z...***..^^^^^.........***...........rr~~~
+888888888888888888888z..***^^....^^......*****............rr~~~~
+88888888888888888888z.***.^^....^^^^^.****....^^^^^.......r.~~~~
+8888888988888888888z..*^^^.^^^^^^^..***.....^^^^^^^^^^...rr~~~~~
+88888888888888z.....**^^^^^^^^^^.****......^^^^^^^^^^...rr~~~~~~
+8888888888888z....***^^^^^^^^^^***........^^^^^^^^^^^^.rr~~~~~~~
+888888888888z....**^^^^^^^^^^.**.....rr....^^^^^^^^...rr~~~~~~~~
+88888878888z...***^^^^^^^^^.***.....rrrrr...^^^^^^^.rr~~~~~~~~~~
+88888888z.......^***...^^^***.....rr~~~~rrr.^^^^^^rrr~~~~~~~~~~~
+88888z.............********....rrrr~~~~~~~rrrrrrrr~~~~~~~~~~~~~~
+8888z.............~~.........rrr~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 88z..........~~~~~~~~~.....~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 8z.........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 8z.......~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
