--- a/contaePages/naContae31.html
+++ b/contaePages/naContae31.html
@@ -12,19 +12,19 @@ xt......^^.tttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 t.^^^^^^^^...tttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 t.^^^^^^^^^^...ttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 t.^^^^^^^^.^^.....tttttttttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-t...^^^^^^^^^.**^......>....tttttttxxxxxxxxxxxxxxxxxxxxxxxxxx
-ttt..^^^^^^^^.*.^^.....>>.*.......tttxxxxxxxxxxxxxxxxxxxxxxxx
-xxttttt^^^^^^.***.......>>.***......ttxxtttttttttttxxxxxxxxxx
-xxxxxxtttt..^^..******...>>>>*>>.....tttt.........ttttttxxxxx
-xxxxxxxxxttt.^.......******..*.>>>.....................ttxxxx
-xxxxxxxxxxxt.............>******..>>>...>>>>>>>>>>>>>>..ttxxx
-xxxxxxxxxxxtt...........>>.....***..>>>>>................tttx
-xxxxxxxxxxxxtt..........>........****......................tt
-xxxxxxxxxxxxxt..........>>..........*.......................t
-xxxxxxxxxxxxxttt.........>>>........****....................t
-xxxxxxxxxxxxxxxtt..........>...........***...................
-xxxxxxxxxxxxxxxxtt.........>.............**..................
-xxxxxxxxxxxxxxxxxtt.......>>..............**.................
+t...^^^^^^^^^.**^......r....tttttttxxxxxxxxxxxxxxxxxxxxxxxxxx
+ttt..^^^^^^^^.*.^^.....rr.*.......tttxxxxxxxxxxxxxxxxxxxxxxxx
+xxttttt^^^^^^.***.......rr.***......ttxxtttttttttttxxxxxxxxxx
+xxxxxxtttt..^^..******...rrrr*rr.....tttt.........ttttttxxxxx
+xxxxxxxxxttt.^.......******..*.rrr.....................ttxxxx
+xxxxxxxxxxxt.............r******..rrr...rrrrrrrrrrrrrr..ttxxx
+xxxxxxxxxxxtt...........rr.....***..rrrrr................tttx
+xxxxxxxxxxxxtt..........r........****......................tt
+xxxxxxxxxxxxxt..........rr..........*.......................t
+xxxxxxxxxxxxxttt.........rrr........****....................t
+xxxxxxxxxxxxxxxtt..........r...........***...................
+xxxxxxxxxxxxxxxxtt.........r.............**..................
+xxxxxxxxxxxxxxxxxtt.......rr..............**.................
 xxxxxxxxxxxxxxxxxxttt......................**................
 xxxxxxxxxxxxxxxxxxxxtt......................**...............
 xxxxxxxxxxxxxxxxxxxxxtt......................*...............
