--- a/contaePages/naContae4.html
+++ b/contaePages/naContae4.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~~~~~~>>>>>>.**.....~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~>>>>>>^^^****..........~~~~~~~~
-~~~~~~~~~~~~~~~~~>>>^^^^^^^**.*...............~~~~
-~~~~~~~~~~~~~~~>>>.^^^^^****..*...............~~~~
-~~~~~~~~~~~~~>>>.^^^^****.....*...............~~~~
-~~...>>>>>>>>>..^^^^^*.*......***............~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~rrrrrr.**.....~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~rrrrrr^^^****..........~~~~~~~~
+~~~~~~~~~~~~~~~~~rrr^^^^^^^**.*...............~~~~
+~~~~~~~~~~~~~~~rrr.^^^^^****..*...............~~~~
+~~~~~~~~~~~~~rrr.^^^^****.....*...............~~~~
+~~...rrrrrrrrr..^^^^^*.*......***............~~~~~
 ~...^^^^^^^^^^^^^^****.*........**.........~~~~~~~
 ~...^^^^^^^^^^^.***....*.........*..........~~~~~~
 ~.....^^^^*******^...***.........*..........~~~~~~
