--- a/contaePages/naContae6.html
+++ b/contaePages/naContae6.html
@@ -23,18 +23,18 @@
 ~~.....**.......**............~~~
 ~.......***...***............~~~~
 ..........*****.*...........~~~~~
->.....******.....*.........~~~~~~
->....**..**......**.......~~~~~~~
->....*..**........*......~~~~~~~~
->>.**...*........**.....~~~~~~~~~
-~>.....**.......>>....~~~~~~~~~~~
-~>>....*.....>>>>>>>>~~~~~~~~~~~~
-~>>..**..>>>>>***...~~~~~~~~~~~~~
-~~>..>>>>>>>***....~~~~~~~~~~~~~~
-~~>.>>>>>~~.*...~~~~~~~~~~~~~~~~~
-~~>>>>>~....~~~~~~~~~~~~~~~~~~~~~
-~~>>~....~~~~~~~~~~~~~~~~~~~~~~~~
-~~>>..~~~~~~~~~~~~~~~~~~~~~~~~~~~
+r.....******.....*.........~~~~~~
+r....**..**......**.......~~~~~~~
+r....*..**........*......~~~~~~~~
+rr.**...*........**.....~~~~~~~~~
+~r.....**.......rr....~~~~~~~~~~~
+~rr....*.....rrrrrrrr~~~~~~~~~~~~
+~rr..**..rrrrr***...~~~~~~~~~~~~~
+~~r..rrrrrrr***....~~~~~~~~~~~~~~
+~~r.rrrrr~~.*...~~~~~~~~~~~~~~~~~
+~~rrrrr~....~~~~~~~~~~~~~~~~~~~~~
+~~rr~....~~~~~~~~~~~~~~~~~~~~~~~~
+~~rr..~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 
