--- a/contaePages/naContae7.html
+++ b/contaePages/naContae7.html
@@ -11,29 +11,29 @@
 ~....~~~~~~..~~~~~~~~~~~~~~~~~
 ~........~~~~~~~...MM~~~~~~~~~
 ~..*****........^^MMM.~~~~~~~~
->..*...***....****MM^.~~~~~~~~
->..*.....*****^^M*MM^.~~~~~~~~
->***...........^**M^..~~~~~~~~
->..*^^^^^^^...MM*^^^.~~~~~~~~~
->..**^^^^^^^^M**^^^...~~~~~~~~
->>..**^^^^^^^**^^^^^^.MM.~~~~~
-~>..^**^^^^^**...******M.~~~~~
-~>>..^^**^^*******.^^M**..~~~~
-~~~>..^^^***^^^....^MMM*....~~
-~~~>...^^^^*.....^^MMM^*......
-~~~>..^^^^^*^^^..^MMM..*......
-~~~>.....^^^*...^^^^..*.....~~
-~~~>........**.^^.^^.**^...~~~
-~~~>..>>>>...*********^^..~~~~
-~~~>>>>.~~>>.**^^^^^^.^..~~~~~
-~~~~>~~~~~~>>.**...**^...~~~~~
-~~~~~~~~~~~>>..******..~~~~~~~
-~~~~~~~~~~~~>>..^^^*...~~~~~~~
-~~~~~~~~~>>>>.^^^^^*...~~~~~~~
-~~~~~~~~>>...^^^^^**..~~~~~~~~
-~~~~~~~~>>.^^^^^..*..~~~~~~~~~
-~~~~~~~~>..^^^^..**.~~~~~~~~~~
-~~~~~~~~>.....***...~~~~~~~~~~
+r..*...***....****MM^.~~~~~~~~
+r..*.....*****^^M*MM^.~~~~~~~~
+r***...........^**M^..~~~~~~~~
+r..*^^^^^^^...MM*^^^.~~~~~~~~~
+r..**^^^^^^^^M**^^^...~~~~~~~~
+rr..**^^^^^^^**^^^^^^.MM.~~~~~
+~r..^**^^^^^**...******M.~~~~~
+~rr..^^**^^*******.^^M**..~~~~
+~~~r..^^^***^^^....^MMM*....~~
+~~~r...^^^^*.....^^MMM^*......
+~~~r..^^^^^*^^^..^MMM..*......
+~~~r.....^^^*...^^^^..*.....~~
+~~~r........**.^^.^^.**^...~~~
+~~~r..rrrr...*********^^..~~~~
+~~~rrrr.~~rr.**^^^^^^.^..~~~~~
+~~~~r~~~~~~rr.**...**^...~~~~~
+~~~~~~~~~~~rr..******..~~~~~~~
+~~~~~~~~~~~~rr..^^^*...~~~~~~~
+~~~~~~~~~rrrr.^^^^^*...~~~~~~~
+~~~~~~~~rr...^^^^^**..~~~~~~~~
+~~~~~~~~rr.^^^^^..*..~~~~~~~~~
+~~~~~~~~r..^^^^..**.~~~~~~~~~~
+~~~~~~~~r.....***...~~~~~~~~~~
 ~~~~~~~...*****...~~~~~~~~~~~~
 ~~~~~~~........~~~~~~~~~~~~~~~
 ~~~~~~~..~~~~~~~~~~~~~~~~~~~~~`
