--- a/contaePages/naContae8.html
+++ b/contaePages/naContae8.html
@@ -17,11 +17,11 @@
 8888z....^^^.**MMMMMMMMMMMMM.******..^MMMMMM^^^.......ttx
 z..8.......***MMMMMMMMMMMMM.......*..^^^^^^^^.......tttxx
 z..8....^***MMMM^^^^^^MMMM........****..........tttttxxxx
-z.888..^**MMMMMM^MMMM^MMM....>>>>>>>>*.......ttttxxxxxxxx
-0888z...*MMMMMMM^MM^^^MM...>>>...^^.>*......ttxxxxxxxxxxx
-8898z..**MMMMMM^^MMMMMM..>>>.^^^^^^.>>>>>>>ttxxxxxxxxxxxx
-88888z.*MMMMMMM^MMMM.>>>>>^^^^.^^^.***....ttxxxxxxxxxxxxx
-8788z..*^^^M^^^^.>>>>>..^^^MMM^^..**......txxxxxxxxxxxxxx
+z.888..^**MMMMMM^MMMM^MMM....rrrrrrrr*.......ttttxxxxxxxx
+0888z...*MMMMMMM^MM^^^MM...rrr...^^.r*......ttxxxxxxxxxxx
+8898z..**MMMMMM^^MMMMMM..rrr.^^^^^^.rrrrrrrttxxxxxxxxxxxx
+88888z.*MMMMMMM^MMMM.rrrrr^^^^.^^^.***....ttxxxxxxxxxxxxx
+8788z..*^^^M^^^^.rrrrr..^^^MMM^^..**......txxxxxxxxxxxxxx
 .......*..^^^....^^^^^^^MMMM^^^****.....tttxxxxxxxxxxxxxx
 ..^^^^^*...^^^^^^^..^^..^^^^^.**...ttttttxxxxxxxxxxxxxxxx
 ...^^^^*MM^M.********^^^^..****..tttxxxxxxxxxxxxxxxxxxxxx
