--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -6,19 +6,19 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~>>..~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~
-~~~~~~>>>....~~~~~~~.......~~~~~~~~~~~~~~~
-~~~~~~>.......*~~~.....................~~~
-~~~~~~>*......**.............*...........~
-~~~~~~>**......**..........***...........~
-~~~~~~>.**......****...*****..............
-~~~~~~>..**.......******..................
-~~~~~>>..**.....***..***..................
-~~~>>>>..*....***......**................~
-~~~>.....**..**.........**...............~
-~~~>.....*****...........**..............~
-~~~>.....**..........~~...***...........~~
-~~~>....**......^.~~~~~~~~.............~~~
+~~~~~~rr..~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~
+~~~~~~rrr....~~~~~~~.......~~~~~~~~~~~~~~~
+~~~~~~r.......*~~~.....................~~~
+~~~~~~r*......**.............*...........~
+~~~~~~r**......**..........***...........~
+~~~~~~r.**......****...*****..............
+~~~~~~r..**.......******..................
+~~~~~rr..**.....***..***..................
+~~~rrrr..*....***......**................~
+~~~r.....**..**.........**...............~
+~~~r.....*****...........**..............~
+~~~r.....**..........~~...***...........~~
+~~~r....**......^.~~~~~~~~.............~~~
 ~~~~...**.....^^^.~~~~~~~~~~~.........~~~~
 ~~~~...**.....^.^..~~~~~~~~~~~~~~~~~~~~~~~
 ~~~.....**....^^^^.~~~~~~~~~~~~~~~~~~~~~~~
