--- a/contaePages/naContae14.html
+++ b/contaePages/naContae14.html
@@ -14,10 +14,10 @@
 8988888888888888z...*******^^....~~~~~~~~~~
 88888888888898888z.......*^^^...~~~~~~~~~~~
 88888z..888888888888z....*......~~~~~~~~~~~
-888z.......88888888z.....*..>>..~~~~~~~~~~~
-888z.........887888z.....*..>>>..~~~~~~~~~~
-888z....**....888888z....*>>>>>..~~~~~~~~~~
-888z....***...............**>>...~~~~~~~~~~
+888z.......88888888z.....*..rr..~~~~~~~~~~~
+888z.........887888z.....*..rrr..~~~~~~~~~~
+888z....**....888888z....*rrrrr..~~~~~~~~~~
+888z....***...............**rr...~~~~~~~~~~
 z.......*..***.....*.......**....~~~~~~~~~~
 ........*....*******........**......~~~~~~~
 ........*..^^^^^...**.....**.**........~~~~
@@ -30,9 +30,9 @@ z....888z.^^MM^^^^........*****..****.....~
 888888888z...............*....**^^^.~~~~~~~
 888880888z.......888.....*...**^^^.~~~~~~~~
 8888888888z..88888~8z.......**.^^..~~~~~~~~
-88888888888888888888z...>>.**.....~~~~~~~~~
-8888888888888888888z....>>>>>.....~~~~~~~~~
-8888888808888888788z.....>>>>>....~~~~~~~~~
+88888888888888888888z...rr.**.....~~~~~~~~~
+8888888888888888888z....rrrrr.....~~~~~~~~~
+8888888808888888788z.....rrrrr....~~~~~~~~~
 8888888888888888888z~...........~~~~~~~~~~~
 888888888888888888z~~~....~~~~~~~~~~~~~~~~~
 
