--- a/contaePages/naContae2.html
+++ b/contaePages/naContae2.html
@@ -31,9 +31,9 @@
 ~~~~~....^^^^**..............~~~~~~~~
 ~~~~~~....^^^^**.............~~~~~~~~
 ~~~~~~~....^^^^*^............~~~~~~~~
-~~~~~~~~~~...>>*^^...........~~~~~~~~
-~~~~~~~~~~~~~~>>>>>.........~~~~~~~~~
-~~~~~~~~~~~~~~~~~~>>>>>>>~~~~~~~~~~~~
+~~~~~~~~~~...rr*^^...........~~~~~~~~
+~~~~~~~~~~~~~~rrrrr.........~~~~~~~~~
+~~~~~~~~~~~~~~~~~~rrrrrrr~~~~~~~~~~~~
 
 
     </div>
