--- a/contaePages/naContae3.html
+++ b/contaePages/naContae3.html
@@ -22,22 +22,22 @@
 ~~~~~~~^^^...........**.......~~~~
 ~~~~~~^^^............*........~~~~
 ~~~~~~.^.............*.......~~~~~
-~~~>>>^***............***...~~~~~~
-~~~>..^..**............**..~~~~~~~
-~~>>.......***........**..~~~~~~~~
-~>>..........**.......*..~~~~~~~~~
-~>.............****..*..~~~~~~~~~~
->>................****..~~~~~~~~~~
->>......................~~~~~~~~~~
->>.........................~~~~~~~
->............................~~~~~
->>.............................~~~
-~>>>...........................~~~
-~~~>>..........................~~~
-~~~~>.........................~~~~
-~~~>>..~~~...................~~~~~
-~>>>..~~~~~~~.............~~~~~~~~
-~>...~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~rrr^***............***...~~~~~~
+~~~r..^..**............**..~~~~~~~
+~~rr.......***........**..~~~~~~~~
+~rr..........**.......*..~~~~~~~~~
+~r.............****..*..~~~~~~~~~~
+rr................****..~~~~~~~~~~
+rr......................~~~~~~~~~~
+rr.........................~~~~~~~
+r............................~~~~~
+rr.............................~~~
+~rrr...........................~~~
+~~~rr..........................~~~
+~~~~r.........................~~~~
+~~~rr..~~~...................~~~~~
+~rrr..~~~~~~~.............~~~~~~~~
+~r...~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     
     </div>
