--- a/contaePages/naContae5.html
+++ b/contaePages/naContae5.html
@@ -20,12 +20,12 @@
 ~~~~~...........***......
 ~~~~~~~.........*........
 ~~~~~~~~........*........
-~~~~~~~~~~......**..>>>>>
-~~~~~~~.........>>>>>...~
-~~~~~.........>>>*......~
-~~~>>........>>..*.....~~
-~...>>>>..>>>>...*....~~~
-~......>>>>.........~~~~~
+~~~~~~~~~~......**..rrrrr
+~~~~~~~.........rrrrr...~
+~~~~~.........rrr*......~
+~~~rr........rr..*.....~~
+~...rrrr..rrrr...*....~~~
+~......rrrr.........~~~~~
 ~.................~~~~~~~
 ~~...............~~~~~~~~
 ~~...............~~~~~~~~
